--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,13 @@ spring.datasource.username=root
 
 #Database password
 spring.datasource.password=senha123@
+
+#Email configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+# Note: Use App Password instead of regular password for security
+# Generate App Password at: https://support.google.com/accounts/answer/185833
+spring.mail.username=${SPRING_MAIL_USERNAME} 
+spring.mail.password=${SPRING_MAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
