--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,8 @@ spring.mail.username=${SPRING_MAIL_USERNAME}
 spring.mail.password=${SPRING_MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+#RabbitMQ Configuration
+#Generate an instance at: https://www.cloudamqp.com/
+spring.rabbitmq.addresses=${SPRING_RABBITMQ_ADDRESSES}
+spring.rabbitmq.queue=ms.email
